--- a/Suivi_TNT/templates/Suivi_TNT/add-suivi-tnt.html
+++ b/Suivi_TNT/templates/Suivi_TNT/add-suivi-tnt.html
@@ -3,4 +3,15 @@
     <div class="text-center">
         <h1>{{ Titre }}</h1>
     </div>
+    <div>
+        <form action="#" method="post">
+            {% csrf_token %}
+            {{ Forms.as_p }}
+            <input class="btn btn-success" type="submit" value="Enregistrer">
+        </form>
+    </div>
+
+    {% include 'table_suivi_tnt.html' %}
+
+
 {% endblock %}
