Creation Application Web
Ajout Formulaire Ajout Suivi TNT
Enregistrement des données dans la base de donnée
mise en page

--- a/Suivi_TNT/templates/Suivi_TNT/add-suivi-tnt.html
+++ b/Suivi_TNT/templates/Suivi_TNT/add-suivi-tnt.html
@@ -4,9 +4,14 @@
         <h1>{{ Titre }}</h1>
     </div>
     <div>
+                {{ Erreur }}
+
+
         <form action="#" method="post">
             {% csrf_token %}
-            {{ Forms.as_p }}
+
+            {{ Forms.as_div }}
+
             <input class="btn btn-success" type="submit" value="Enregistrer">
         </form>
     </div>
