--- a/Suivi_TNT/templates/base.html
+++ b/Suivi_TNT/templates/base.html
@@ -1,11 +1,14 @@
+{% load static %}
 <!doctype html>
 <html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ Titre }}</title>
+{#    bootstrap#}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'Suivi_TNT/css/style.css' %}">
 </head>
 <body class="container-fluid">
 {% block main %}
