--- a/Suivi_TNT/templates/table_suivi_tnt.html
+++ b/Suivi_TNT/templates/table_suivi_tnt.html
@@ -1,11 +1,11 @@
-<div class="table-responsive">
+<div class="table-responsive mb-2 mt-5">
     <table class="table table-bordered">
         <thead class="table-success">
         <tr>
             <th>Référence</th>
             <th>Numéro Commande</th>
             <th>Numèro Dossier</th>
-            <th>Numèro de Suivi TNT</th>
+            <th>Numèro Suivi TNT</th>
             <th>Date Création</th>
         </tr>
         </thead>
