Creation Application Web
Mise en page de la vue Ajout Suivi TNT

Ajuout Template footer.html

--- a/Suivi_TNT/templates/Suivi_TNT/add-suivi-tnt.html
+++ b/Suivi_TNT/templates/Suivi_TNT/add-suivi-tnt.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block main %}
-    <div class="text-center mb-3 mt-3">
+    <div class="text-center my-4">
         <h1>{{ Titre }}</h1>
     </div>
     <div class="row justify-content-center ">
@@ -14,8 +14,9 @@
                 <div class="">
                     {{ Forms }}
                 </div>
-                <div class="mb-2 mt-3">
+                <div class="mb-2 mt-3 d-flex justify-content-center">
                     <input class="btn btn-success" type="submit" value="Enregistrer">
+                    <button class="btn btn-danger ms-2" type="reset">Annuler</button>
                 </div>
             </form>
         </div>
