Creation Application Web
Ajout bouton "Ajout Suivi TNT"

--- a/Suivi_TNT/templates/Suivi_TNT/index.html
+++ b/Suivi_TNT/templates/Suivi_TNT/index.html
@@ -3,6 +3,10 @@
     <div class="text-center">
         <h1>{{ Titre }}</h1>
     </div>
-
+    <div>
+        <a class="text-decoration-none" href="{% url 'add-suivi-tnt' %}">
+            <input class="btn btn-success" type="button" value="Ajout Suivi TNT">
+        </a>
+    </div>
     {% include 'table_suivi_tnt.html' %}
 {% endblock %}
